# fortlit

./: .bumpversion.cfg  .drone.yml  .isort.cfg  .pre-commit-config.yaml  .travis.yml  MANIFEST.in  Makefile  Pipfile  README.md  pyproject.toml  setup.cfg  setup.py  tox.ini
src/fortlit/: __init__.py  lit_time.py
tests/: test_lit_time.py
