[tool.poetry]
name = "fortlit"
version = "1.0.0"
description = "A fortune like program that displays a quote from literature where the actual time is mentioned."
authors = ["Marvin Steadfast <marvin@xsteadfastx.org>"]
readme = "README.md"
include = ["fortlit/data/times.json"]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.scripts]
fortlit = "fortlit:entrypoint"

[tool.poetry.dev-dependencies]
mypy = "^0.740.0"
flake8 = "^3.7"
pylint = "^2.4"
tox = "^3.14"
pytest = "^5.2"
black = "=19.10b0"
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
